--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,11 @@
 :root {
-  --font-mono: ui-monospace,
-Menlo, Monaco, "Cascadia Mono",
-"Segoe UI Mono",
-    "Roboto Mono", "Oxygen"
-Mono", "Ubuntu Monospace",
-"Source Code Pro",
-    "Fira Mono", "Droid Sans"
-Mono", "Courier New", monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
+    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
+    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
   --color-text-main: #333;
   --color-text-sub: #999;
-  --color-text-unpaonted: #fff;
-  --color-text-errorr: #f33;
+  --color-text-unpainted: #fff;
+  --color-text-error: #f33;
   --color-bg-main: #fff;
   --color-bg-sub: #f3f3f3;
   --color-bg-code: #fafafa;
@@ -36,6 +31,23 @@ body {
 }
 
 body {
-  font-family:
-    system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', YuGothic,
+    'ヒラギノ角ゴ ProN W3', Hiragino Kaku Gothic ProN, Arial, 'メイリオ', Meiryo,
+    sans-serif;
+  color: var(--color-text-main);
+  line-height: 1.8;
+}
+
+code {
+  font-family: menlo, inconsolata, monospace;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ol,
+ul {
+  list-style: none;
 }
